<resources>
    <string name="app_name">Cachaça Gestor</string>

    <string name="refreshing_data">Sincronizando dados com o servidor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Nome de usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_create_account">Criar conta</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Esse email é inválido</string>
    <string name="error_invalid_password">Essa senha é muita curta</string>
    <string name="error_incorrect_password">Essa senha é incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="title_topbar">Menu Principal</string>
    <string name="title_main_activity">Taverna de Minas</string>
    <string name="title_activity_new_account">Criar Nova Conta</string>
    <string name="message_leaving_app">Finalizando! Aguarde...</string>
    <string name="message_atempting_login">Logando! Aguarde...</string>
    <string name="message_type_again">Aperte mais uma vez para sair</string>
    <string name="message_attempting_new_account">Criando nova conta...</string>
    <string name="button_text_management">Gestão</string>
    <string name="button_text_production">Alambique</string>
    <string name="button_text_financial">Financeiro</string>
    <string name="title_activity_management">Gestão</string>
    <string name="title_activity_production">ProductionActivity</string>
    <string name="title_activity_new_user">Adicionar Funcionário</string>
    <string name="title_activity_users">Funcionários</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_users_details">Detalhes do Funcionário</string>
</resources>
