<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background4"
        android:alpha="0.90"
        android:adjustViewBounds="false" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".View.Main.LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/create_account_button"
            style="?android:textAppearanceSmall"
            android:text="@string/action_create_account"
            android:textStyle="bold"
            android:background="#B87333"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/email_sign_in_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:background="@color/buttonBackground"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/colorLabel"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="16dp"
            android:layout_above="@+id/email_sign_in_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#ffffff" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:textColorHint="@color/colorLabel"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_above="@+id/password"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#ffffff"
            android:shadowColor="#000000"
            android:shadowRadius="10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_marginBottom="22dp"
            android:textSize="35dp"
            android:layout_above="@+id/email"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView"
            android:textColor="@color/colorLabel"
            android:shadowColor="#000000"
            android:shadowRadius="10"
            />
    </RelativeLayout>
</FrameLayout>
